--- a/RangeMinimumRequests/RangeMinimumRequests.vcxproj
+++ b/RangeMinimumRequests/RangeMinimumRequests.vcxproj
@@ -104,6 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\Users\ladya\source\repos\RangeMinimumRequests\source;C:\Users\ladya\source\repos\RangeMinimumRequests\source\alg3;C:\Users\ladya\source\repos\RangeMinimumRequests\source\alg1;C:\Users\ladya\source\repos\RangeMinimumRequests\source\alg2;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
